<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:useDefaultMargins="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.architecture.blueprints.todoapp.calculator.CalculatorActivity"
    tools:showIn="@layout/activity_calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/formula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="right"
            android:text="@string/formula_text"
            android:textColor="#ffffff"
            android:textSize="50sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <!--1行目-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type1"
                    android:text="@string/clear"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/sign"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type1"
                    android:text="@string/sign"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/percent"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type1"
                    android:text="@string/sign"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type1"
                    android:text="@string/delete"
                    android:textSize="25sp" />
            </TableRow>

            <!--2行目-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num7"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn7"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/num8"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn8"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/num9"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn9"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/divide"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type2"
                    android:text="@string/divide"
                    android:textColor="@color/colorFontMain"
                    android:textSize="36sp" />
            </TableRow>

            <!--3行目-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num4"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn4"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/num5"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn5"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/num6"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn6"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/multiply"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type2"
                    android:text="@string/multiply"
                    android:textColor="@color/colorFontMain"
                    android:textSize="36sp" />
            </TableRow>

            <!--4行目-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num1"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn1"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/num2"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn2"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/num3"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn3"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/subtract"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type2"
                    android:text="@string/subtraction"
                    android:textColor="@color/colorFontMain"
                    android:textSize="40sp" />

            </TableRow>

            <!--5行目-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num0"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/btn0"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/point"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type3"
                    android:text="@string/point"
                    android:textColor="@color/colorFontMain"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/equal"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type2"
                    android:text="@string/equal"
                    android:textColor="#ffffff"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_type2"
                    android:text="@string/add"
                    android:textColor="@color/colorFontMain"
                    android:textSize="36sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_next"
            android:text="@string/next"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
